--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>ОП.04 - ДЗ №1</title>
+  <style>#inputData {width: 200px;}</style>
 </head>
 <body>
   <h1>ОП.04 - ДЗ №1</h1>
@@ -10,7 +11,7 @@
   <p>
     Это файл домашнего задания №1, которое выполнил студент <strong id="student">ФИО</strong> в рамках изучения дисциплины ОП.04 - Основы алгоритмизации и программирования.
   </p>
-  <input type="text" id="inputData">
+  <input type="text" id="inputData" placeholder="Ввод в виде: 1, 2, 1, 2 или 1212">
   <button id="buttonData">Отправить</button>
   <p>Результат: <strong id="result"></strong></p>
   <script src="script.js"></script>
